configuration/argocd/disallow-default-project-policy.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicy
metadata:
  name: disallow-default-project
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   ["argoproj.io"]
      apiVersions: ["v1alpha1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["applications"]
  validations:
    - expression: "object.spec.project != 'default' "
      message: "Applications are not permitted to use the default Argo CD project"
      reason: Forbidden
